--- a/login.html
+++ b/login.html
@@ -2,19 +2,47 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>ログイン</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="app.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
 </head>
 <body>
-    <div class="container">
-        <h1>ログイン</h1>
-        <input type="text" id="username" placeholder="ユーザー名">
-        <input type="password" id="password" placeholder="パスワード">
-        <button onclick="login()">ログイン</button>
-        <p id="message"></p>
-        <p>アカウントをお持ちでない方は、<a href="register.html">登録</a>してください。</p>
-    </div>
+
+    <h2>ログイン</h2>
+    <form id="loginForm">
+        <label for="username">ユーザー名:</label>
+        <input type="text" id="username" required><br>
+        <label for="password">パスワード:</label>
+        <input type="password" id="password" required><br>
+        <button type="submit">ログイン</button>
+    </form>
+
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', async function(e) {
+            e.preventDefault();
+
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+
+            const response = await fetch('https://api.yourdomain.com/auth', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ username, password }),
+            });
+
+            const data = await response.json();
+
+            if (data.valid) {
+                // ログイン成功後、localStorageに情報を保存
+                localStorage.setItem('loggedIn', 'true');
+                localStorage.setItem('username', username); // ユーザー名も保存
+                window.location.href = 'index.html'; // ログイン成功後にトップページへリダイレクト
+            } else {
+                alert('Invalid credentials');
+            }
+        });
+    </script>
+
 </body>
 </html>
