--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            const response = await fetch('https://api.yourdomain.com/auth', {
+            const response = await fetch('https://5f.glitch.me/auth', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
