--- a/register.html
+++ b/register.html
@@ -1,20 +1,279 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>ユーザー登録</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="app.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>登録・ログイン</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
+
+    .container {
+      max-width: 400px;
+      margin: 20px auto;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+    }
+
+    input,
+    button,
+    select,
+    textarea {
+      margin: 10px 0;
+      padding: 10px;
+      width: 100%;
+      max-width: 100%;
+      box-sizing: border-box;
+      font-size: 16px;
+      height: 50px;
+      line-height: 1.5;
+    }
+
+    .statusText {
+      display: inline-block;
+      vertical-align: middle;
+      margin-left: 8px;
+      min-width: 80px;
+    }
+
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 60px;
+      height: 34px;
+      vertical-align: middle;
+    }
+
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: red;
+      transition: .4s;
+      border-radius: 34px;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      transition: .4s;
+      border-radius: 50%;
+    }
+
+    input:checked+.slider {
+      background-color: green;
+    }
+
+    input:checked+.slider:before {
+      transform: translateX(26px);
+    }
+
+    .status-list {
+      margin-top: 20px;
+      text-align: left;
+    }
+
+    .status-item {
+      padding: 10px;
+      border-bottom: 1px solid #ddd;
+    }
+
+    /* 基本的なボタンスタイル */
+    button {
+      background-color: #4CAF50;
+      /* ボタンの背景色 */
+      color: white;
+      /* テキストの色 */
+      border: none;
+      /* ボーダーを消す */
+      padding: 15px 30px;
+      /* 内側の余白（上下15px, 左右30px） */
+      font-size: 1.2rem;
+      /* フォントサイズ（相対単位） */
+      border-radius: 10px;
+      /* 角を丸くする */
+      cursor: pointer;
+      /* マウスオーバー時にポインタが表示される */
+      width: 100%;
+      /* ボタンを横幅いっぱいに広げる */
+      max-width: 350px;
+      /* 最大幅を350pxに制限 */
+      margin: 10px auto;
+      /* 上下にマージンを追加、中央に配置 */
+      transition: background-color 0.3s, transform 0.2s;
+      /* 背景色とアニメーション */
+      box-sizing: border-box;
+      /* パディングを含めた幅の調整 */
+    }
+
+
+
+
+    button:not(:disabled) {
+      background-color: #4CAF50;
+      /* 緑 */
+    }
+
+    button:disabled {
+      background-color: #BCBCBC;
+      /* 灰色 */
+    }
+
+    #toast-container {
+      position: fixed;
+      top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 1000;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .toast {
+      min-width: 250px;
+      padding: 15px;
+      margin: 5px 0;
+      border-radius: 8px;
+      color: white;
+      font-size: 16px;
+      text-align: center;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+      opacity: 0;
+      transform: translateY(-20px);
+      transition: opacity 0.3s, transform 0.3s;
+    }
+
+    .toast.show {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .toast.info {
+      background-color: #3498db;
+    }
+
+    .toast.success {
+      background-color: #2ecc71;
+    }
+
+    .toast.warning {
+      background-color: #f39c12;
+    }
+
+    .toast.error {
+      background-color: #e74c3c;
+    }
+  </style>
 </head>
+
 <body>
-    <div class="container">
-        <h1>ユーザー登録</h1>
-        <input type="text" id="username" placeholder="ユーザー名">
-        <input type="password" id="password" placeholder="パスワード">
-        <button onclick="register()">登録</button>
-        <p id="message"></p>
-        <p>すでにアカウントをお持ちの方は、<a href="login.html">ログイン</a>してください。</p>
+
+  <div id="toast-container"></div>
+
+  <div class="container">
+    <div id="registerContainer">
+      <h2>ユーザー登録</h2>
+      <input type="text" id="userId" placeholder="ユーザー名">
+      <input type="password" id="password" placeholder="パスワード">
+      <button onclick="registerUser()">登録</button>
+      <p>既にアカウントがある場合は <a href="javascript:void(0);" onclick="toggleLogin()">ログイン</a></p>
     </div>
+
+    <div id="loginContainer" style="display: none;">
+      <h2>ログイン</h2>
+      <input type="text" id="loginUserId" placeholder="ユーザー名">
+      <input type="password" id="loginPassword" placeholder="パスワード">
+      <button onclick="loginUser()">ログイン</button>
+      <p>アカウントを作成する場合は <a href="javascript:void(0);" onclick="toggleRegister()">登録</a></p>
+    </div>
+  </div>
+
+  <script>
+    const BASE_URL = "https://5f.glitch.me";
+
+    function toggleRegister() {
+      document.getElementById("registerContainer").style.display = "block";
+      document.getElementById("loginContainer").style.display = "none";
+    }
+
+    function toggleLogin() {
+      document.getElementById("registerContainer").style.display = "none";
+      document.getElementById("loginContainer").style.display = "block";
+    }
+
+    async function registerUser() {
+      const userId = document.getElementById("userId").value;
+      const password = document.getElementById("password").value;
+
+      const response = await fetch(`${BASE_URL}/register`, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ password, userId })
+      });
+      const result = await response.json();
+
+      if (result.success) {
+        toast("登録成功！", "success");
+        toggleLogin();
+      } else {
+        toast(result.error, "warning");
+      }
+    }
+
+    async function loginUser() {
+      const userId = document.getElementById("loginUserId").value;
+      const password = document.getElementById("loginPassword").value;
+
+      const response = await fetch(`${BASE_URL}/login`, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ userId, password })
+      });
+      const result = await response.json();
+
+      if (result.success) {
+        localStorage.setItem('userId', userId);
+        localStorage.setItem('password', password);
+        window.location.href = 'home.html';
+      } else {
+        toast(result.error, "warning");
+      }
+    }
+
+    function toast(message, type = 'info', duration = 3000) {
+      const container = document.getElementById('toast-container');
+      const toast = document.createElement('div');
+      toast.className = `toast ${type}`;
+      toast.textContent = message;
+      container.appendChild(toast);
+
+      setTimeout(() => toast.classList.add('show'), 100);
+
+      setTimeout(() => {
+        toast.classList.remove('show');
+        setTimeout(() => toast.remove(), 300);
+      }, duration);
+    }
+  </script>
 </body>
+
 </html>
