--- a/home.html
+++ b/home.html
@@ -280,7 +280,7 @@
       const userId = localStorage.getItem("userId");
       const password = localStorage.getItem("password");
 
-      fetch(API_URL, {
+      fetch(`${BASE_URL}status`, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ isAwake, message, userId, password })
@@ -300,7 +300,7 @@
     // ステータス一覧を取得
     async function loadStatus() {
       try {
-        const res = await fetch(API_URL); // fetchをawaitで待機
+        const res = await fetch(BASE_URL + "friend/status"); // fetchをawaitで待機
         const statuses = await res.json(); // レスポンスをjsonに変換して待機
 
         const statusList = document.getElementById("statusList");
