--- a/home.html
+++ b/home.html
@@ -300,7 +300,13 @@
     // ステータス一覧を取得
     async function loadStatus() {
       try {
-        const res = await fetch(BASE_URL + "friend/status"); // fetchをawaitで待機
+        const res = await fetch(BASE_URL + "friend/status", {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ userId, password })
+        }); // fetchをawaitで待機
         const statuses = await res.json(); // レスポンスをjsonに変換して待機
 
         const statusList = document.getElementById("statusList");
