--- a/home.html
+++ b/home.html
@@ -366,10 +366,10 @@ async function loadFriendsTab() {
   const userId = localStorage.getItem("userId");
   const password = localStorage.getItem("password");
 
-  try {
-    const res = await fetch(`${BASE_URL}friend/list?userId=${userId}&password=${password}`);
-    const list = await res.json();
+  const _friends = await fetch(`${BASE_URL}friend/list?userId=${userId}&password=${password}`);
+  const friends = await _friends.json();
 
+  try {
     const request = document.getElementById("request");
     request.innerHTML = "";
 
@@ -399,7 +399,7 @@ async function loadFriendsTab() {
       await loadFriendsTab();
     }
 
-    list.pending.forEach((userId) => {
+    friends.pending.forEach((userId) => {
       const item = document.createElement("div");
       item.classList.add("user-item");
       item.innerHTML = `
@@ -429,8 +429,8 @@ async function loadFriendsTab() {
   }
 
   try {
-    const res = await fetch(`${BASE_URL}users`);
-    const list = await res.json();
+    const _list = await fetch(`${BASE_URL}users`);
+    const list = await _list.json();
 
     const featured = document.getElementById("featured");
     featured.innerHTML = "";
