--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ja">
 
 <head>
@@ -507,3 +507,5 @@ async function loadFriendsTab() {
 </body>
 
 </html>
+ -->
+ 改修中です。
