--- a/home.html
+++ b/home.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ja">
 
 <head>
@@ -215,6 +216,7 @@
 <body>
 
   <div id="toast-container"></div>
+  <div id="userinfoContainer"></div>
 
   <div class="container">
     <h2>安全ピン📌</h2>
@@ -229,13 +231,7 @@
       <span class="statusText" id="statusText">寝てる</span>
     </div>
 
-    <input type="text" id="message" placeholder="ひとこと">
-    <select id="presetMessage" onchange="handlePresetChange()">
-      <option value="">カスタム</option>
-      <option value="ご飯なう">ご飯なう</option>
-      <option value="作業なう">作業なう</option>
-      <option value="通話可能">通話可能</option>
-    </select>
+    <input type="text" id="message" placeholder="今何してる？">
     <button id="updateStatus" onclick="updateStatus()">更新</button>
 
     <!-- 他の人のステータス一覧 -->
@@ -289,13 +285,6 @@
         .then(data => {
           document.getElementById("status").checked = data.isAwake;
           document.getElementById("statusText").textContent = data.isAwake ? "起床中" : "就寝中";
-
-          document.getElementById("message").value = data.message === "(未設定)" ? "" : data.message;
-
-          if ([...document.getElementById("presetMessage").options].map(opt => opt.value).includes(data.message)) {
-            document.getElementById("message").disabled = true;
-            document.getElementById("presetMessage").value = data.message;
-          }
         })
         .catch(err => console.error(err));
 
@@ -341,18 +330,24 @@
         const password = localStorage.getItem("password");
         const selfRes = await fetch(`${BASE_URL}status?userId=${userId}&password=${password}`);
         const self = await selfRes.json();
-        const res = await fetch(BASE_URL + "friend/status" + `?userId=${userId}&password=${password}`); // fetchをawaitで待機
+        const res = await fetch(BASE_URL + "friend/status" + `?userId=${userId}&password=${password}`);
         const statuses = await res.json();
 
         const statusList = document.getElementById("statusList");
         statusList.innerHTML = "";
 
-        statuses.unshift(self);
-        statuses.forEach(({ userId, isAwake, message, time }) => {
+        (() => {
           const item = document.createElement("div");
           item.classList.add("status-item");
-          item.innerHTML = `<strong>${userId}</strong> - <span style="color:${isAwake ? 'green' : 'red'};">${isAwake ? "起床中" : "就寝中"}</span>
-                        <br>「${message}」 <small>(${time})</small>`;
+          item.innerHTML = `<strong><a href="javascript:void(0);" onclick="showUserInfo('${userId}')")>${userId}<a></strong> - <span style="color:${self.isAwake ? 'green' : 'red'};">${self.isAwake ? "起床中" : "就寝中"}</span>
+                        <br>「${self.post ? self.post.content : ""}」 <small>(${self.post ? unixToJST(self.post.date) : ""})</small>`;
+          statusList.appendChild(item);
+        })();
+        Object.keys(statuses).forEach((userId) => {
+          const item = document.createElement("div");
+          item.classList.add("status-item");
+          item.innerHTML = `<strong><a href="javascript:void(0);" onclick="showUserInfo('${userId}')")>${userId}<a></strong> - <span style="color:${statuses[userId].isAwake ? 'green' : 'red'};">${statuses[userId].isAwake ? "起床中" : "就寝中"}</span>
+                        <br>「${statuses[userId].post ? statuses[userId].post.content : ""}」 <small>(${statuses[userId].post ? unixToJST(statuses[userId].post.date) : ""})</small>`;
           statusList.appendChild(item);
         });
       } catch (error) {
@@ -475,17 +470,8 @@ async function loadFriendsTab() {
   }
 }
 
-    function handlePresetChange() {
-      const preset = document.getElementById("presetMessage").value;
-      const messageInput = document.getElementById("message");
-      if (preset === "") {
-        messageInput.disabled = false;
-        messageInput.value = "";
-      } else {
-        messageInput.disabled = true;
-        messageInput.value = preset;
-      }
-    }
+
+
 
     function toast(message, type = 'info', duration = 3000) {
       const container = document.getElementById('toast-container');
@@ -501,6 +487,85 @@ async function loadFriendsTab() {
         setTimeout(() => toast.remove(), 300);
       }, duration);
     }
+
+
+
+    async function showUserInfo(userId) {
+      const response = await fetch(`https://5f.glitch.me/users/${userId}`);
+      const userData = await response.json();
+      const container = document.getElementById('userinfoContainer');
+      container.innerHTML = `
+        <div id="userinfo" onclick="closeUserInfo(event)" style="
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(0, 0, 0, 0.5);
+          z-index: 9999;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        ">
+          <div style="
+            width: 80%;
+            height: 60%;
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            overflow: auto;
+          ">
+            <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 10px;">
+              <img src="${userData.icon || 'https://placehold.jp/128x128.png'}" alt="ユーザーアイコン" style="
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                background-color: gray;
+              ">
+              <span style="font-size: 1.2em; font-weight: bold;">${userData.userId}</span>
+            </div>
+            <div style="margin-bottom: 15px; font-size: 0.9em; color: gray;">
+              フレンド数: ${userData.friends} | 投稿数: ${userData.posts.length}
+            </div>
+            <ul style="list-style: none; padding: 0;">
+              ${userData.posts.map(post => `
+                <li style="
+                  margin-bottom: 10px;
+                  padding: 10px;
+                  border-radius: 5px;
+                  background-color: #f4f4f4;
+                ">
+                  <div>${post.content}</div>
+                  <div style="font-size: 0.8em; color: gray;">${unixToJST(post.date)}</div>
+                </li>
+              `).join('')}
+            </ul>
+          </div>
+        </div>
+      `;
+    }
+
+    function closeUserInfo(event) {
+      if (event.target.id === "userinfo") {
+        document.getElementById('userinfoContainer').innerHTML = "";
+      }
+    }
+
+function unixToJST(unixTime) {
+    const date = new Date(unixTime * 1000); //
+    const options = {
+        year: 'numeric',
+        month: '2-digit',
+        day: '2-digit',
+        hour: '2-digit',
+        minute: '2-digit',
+        second: '2-digit',
+        timeZone: 'Asia/Tokyo' // 日本時間を指定
+    };
+    const formatter = new Intl.DateTimeFormat('ja-JP', options);
+    return formatter.format(date);
+}
   </script>
 
 </body>
