--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PWA ダウンロード</title>
+  <title>安全ピン📌 - How to Install</title>
   <link rel="manifest" href="manifest.json">
   <style>
     body {
@@ -98,7 +98,7 @@
 </head>
 
 <body>
-  <h1>PWAをインストールしよう</h1>
+  <h1>安全ピン📌 - How to Install</h1>
   <div id="install-instructions">
     <p>デバイスを判定中...</p>
   </div>
