--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>安全ピン📌</title>
+  <title>安全ピン📌 - Home</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -220,7 +220,7 @@
   <div id="userinfoContainer"></div>
 
   <div class="container">
-    <h2>安全ピン📌</h2>
+    <h2>安全ピン📌 - Home</h2>
 
     <h3><span id="profile" style="color: green;"></span>としてログイン中</h3>
     <!-- ステータス更新 -->
