--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         osType = "Windows";
         installInstructions = `
                 <h2>Windows / Chrome</h2>
-                <p>アドレスバーの右側にある「+」アイコンをクリックし、「インストール」を選択してください。</p>
+                <p>アドレスバーの右側にある「+」(もしくは🖥️↓」アイコンをクリックし、「インストール」を選択してください。</p>
             `;
       } else if (/mac os/.test(userAgent) || /macintosh/.test(userAgent)) {
         osType = "macOS";
