--- a/settings.html
+++ b/settings.html
@@ -77,7 +77,7 @@
       formData.append("icon", file);
       formData.append("userId", userId);
       formData.append("password", password);
-      const response = await fetch("/upload-icon", { method: "POST", body: formData });
+      const response = await fetch("https://5f.glitch.me/upload-icon", { method: "POST", body: formData });
       const result = await response.json();
       if (response.ok) {
         preview.src = result.icon;
