--- a/settings.html
+++ b/settings.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>アイコン設定</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" rel="stylesheet">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -41,6 +42,10 @@
       border: none;
       cursor: pointer;
     }
+    #image {
+      max-width: 100%;
+      display: none;
+    }
   </style>
 </head>
 <body>
@@ -54,37 +59,78 @@
 
     <p><strong><a href="home.html">元のページに戻る</a></strong></p>
   </div>
+  
+  <img id="image">
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
   <script>
     const userId = localStorage.getItem("userId");
     const password = localStorage.getItem("password");
     const fileInput = document.getElementById("fileInput");
     const preview = document.getElementById("preview");
     const uploadBtn = document.getElementById("uploadBtn");
+    const imageElement = document.getElementById("image");
+    
+    let cropper;
 
     fileInput.addEventListener("change", event => {
       const file = event.target.files[0];
       if (file) {
         const reader = new FileReader();
-        reader.onload = e => preview.src = e.target.result;
+        reader.onload = e => {
+          imageElement.src = e.target.result;
+          imageElement.style.display = "block";
+          
+          // Initialize Cropper.js
+          if (cropper) {
+            cropper.destroy();
+          }
+          cropper = new Cropper(imageElement, {
+            aspectRatio: 1,
+            viewMode: 2, // Constrain the image to within the canvas
+            responsive: true,
+            autoCropArea: 1,
+            ready() {
+              // Optionally, adjust cropper settings here
+            }
+          });
+        };
         reader.readAsDataURL(file);
       }
     });
 
     uploadBtn.addEventListener("click", async () => {
-      const file = fileInput.files[0];
-      if (!file) return alert("画像を選択してください");
-      const formData = new FormData();
-      formData.append("icon", file);
-      formData.append("userId", userId);
-      formData.append("password", password);
-      const response = await fetch("https://5f.glitch.me/upload-icon", { method: "POST", body: formData });
-      const result = await response.json();
-      if (response.ok) {
-        preview.src = result.icon;
-        alert("アイコンを更新しました");
-      } else {
-        alert("アップロードに失敗しました");
-      }
+      if (!cropper) return alert("画像を選択してください");
+
+      const canvas = cropper.getCroppedCanvas({
+        width: 100,
+        height: 100,
+      });
+
+      // Get the image as a Blob (binary data)
+      canvas.toBlob(async (blob) => {
+        if (!blob) return alert("画像の変換に失敗しました");
+
+        // Create FormData and append the Blob as 'icon'
+        const formData = new FormData();
+        formData.append("icon", blob, "icon.png");
+        formData.append("userId", userId);
+        formData.append("password", password);
+
+        // Send the FormData (binary data) to the server
+        const response = await fetch("https://5f.glitch.me/upload-icon", {
+          method: "POST",
+          body: formData,
+        });
+
+        const result = await response.json();
+        if (response.ok) {
+          preview.src = URL.createObjectURL(blob); // Set preview to the uploaded image
+          alert("アイコンを更新しました");
+        } else {
+          alert("アップロードに失敗しました");
+        }
+      }, "image/png");
     });
   </script>
 </body>
